--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | LALARIDE</title>
+    <title>Unity WebGL Player | Air-Riding-3D</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -22,20 +22,20 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">LALARIDE</div>
+        <div id="unity-build-title">Air-Riding-3D</div>
       </div>
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/webgl2.asm.loader.js";
+      var loaderUrl = buildUrl + "/webGL.asm.loader.js";
       var config = {
-        dataUrl: buildUrl + "/webgl2.data",
-        frameworkUrl: buildUrl + "/webgl2.asm.framework.js",
-        codeUrl: buildUrl + "/webgl2.asm.js",
-        memoryUrl: buildUrl + "/webgl2.asm.mem",
+        dataUrl: buildUrl + "/webGL.data",
+        frameworkUrl: buildUrl + "/webGL.asm.framework.js",
+        codeUrl: buildUrl + "/webGL.asm.js",
+        memoryUrl: buildUrl + "/webGL.asm.mem",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "LALARIDE",
+        productName: "Air-Riding-3D",
         productVersion: "1.0",
       };
 
